# salary-prediction

./: .gitignore  Makefile  README.md  bentofile.yaml  pyproject.toml
.github/workflows/: run_tests.yml
config/: main.yaml
data/clean_data/: currency_conversion.csv  outlier_detect_remove.csv
data/features_data/: features.csv
data/final/: prediction.csv
docs/: search.js  src.html
docs/src/: clean_data.html  feature_engineer.html  main.html  outlier_removal.html  prediction.html  train.html
notebooks/: Testing.ipynb  Wandb.ipynb
src/: bentoml_run.py  clean_data.py  feature_engineer.py  main.py  outlier_removal.py  prediction.py  serve.py  streamlit_app.py  train.py
tests/: test_clean_data.py  test_outlier_removal.py
wandb/: latest-run
