[tool.poetry]
name = "salary-prediction"
version = "0.1.0"
description = ""
authors = ["Danis Theodoulou"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
pandas = "^1.4.2"
prefect = "^1.2.0"
rich = "^12.2.0"
pre-commit = "^2.18.1"
click = "8.0.4"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
jupyterlab = "^3.3.4"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''