[tool.poetry]
name = "salary-prediction"
version = "0.1.0"
description = ""
authors = ["Danis Theodoulou"]

[tool.poetry.dependencies]
python = "3.8.12"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pandas = "^1.4.2"
prefect = "^1.2.0"
rich = "^12.2.0"
pre-commit = "^2.18.1"
click = "8.0.4"
fuzzywuzzy = "^0.18.0"
wandb = "^0.12.14"
nltk = "^3.7"
scipy = "1.8.0"
scikit-learn = "1.0.2"
pandera = "^0.10.1"
pytest-steps = "^1.8.0"
yellowbrick = "^1.4"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
jupyterlab = "^3.3.4"
pdoc = "^11.0.0"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
